Update to Minecraft 1.21
Co-authored-by: Gegy <gegy.dev@gmail.com>